--- a/AppTFG/AppTFG/App.xaml
+++ b/AppTFG/AppTFG/App.xaml
@@ -1,13 +1,75 @@
 ﻿<Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppTFG.App">
-    <!--
-        Define global resources and styles here, that apply to all pages in your app.
-    -->
+    
+        <!--Define global resources and styles here, that apply to all pages in your app.-->
+    
     <Application.Resources>
-        <ResourceDictionary>
+        <ResourceDictionary Source="Temas/TemaOscuro.xaml">
             <Color x:Key="Primary">White</Color>
-            <Style TargetType="Button">
+            
+            <Style TargetType="NavigationPage">
+                <Setter Property="BarBackgroundColor"
+                    Value="{DynamicResource NavigationBarColor}" />
+                <Setter Property="BarTextColor"
+                    Value="{DynamicResource SecondaryColor}" />
+                <Setter Property="BackgroundColor"
+                    Value="{DynamicResource PageBackgroundColor}" />
+            </Style>
+
+            <Style TargetType="ContentPage">
+                <Setter Property="BackgroundColor"
+                    Value="{DynamicResource PageBackgroundColor}" />
+            </Style>
+
+            <Style x:Key="ButtonStyle"
+               TargetType="Button">
+                <Setter Property="BackgroundColor"
+                    Value="{DynamicResource PrimaryColor}" />
+                <Setter Property="TextColor"
+                    Value="{DynamicResource SecondaryColor}" />
+                <Setter Property="HeightRequest"
+                    Value="45" />
+                <Setter Property="WidthRequest"
+                    Value="190" />
+                <Setter Property="CornerRadius"
+                    Value="18" />
+            </Style>
+
+            <Style x:Key="LargeLabelStyle"
+               TargetType="Label">
+                <Setter Property="TextColor"
+                    Value="{DynamicResource SecondaryTextColor}" />
+                <Setter Property="FontSize"
+                    Value="30" />
+            </Style>
+
+            <Style x:Key="MediumLabelStyle"
+               TargetType="Label">
+                <Setter Property="TextColor"
+                    Value="{DynamicResource PrimaryTextColor}" />
+                <Setter Property="FontSize"
+                    Value="25" />
+            </Style>
+
+            <Style x:Key="SmallLabelStyle"
+               TargetType="Label">
+                <Setter Property="TextColor"
+                    Value="{DynamicResource TertiaryTextColor}" />
+                <Setter Property="FontSize"
+                    Value="15" />
+            </Style>
+        </ResourceDictionary>
+    </Application.Resources>
+</Application>
+
+
+
+    <!--<Application.Resources>
+        <ResourceDictionary Source="Themes/LightTheme.xaml">
+            <Color x:Key="Primary">White</Color>
+            -->
+    <!--<Style TargetType="Button">
                 <Setter Property="TextColor" Value="Black"></Setter>
                 <Setter Property="VisualStateManager.VisualStateGroups">
                     <VisualStateGroupList>
@@ -25,9 +87,9 @@
                         </VisualStateGroup>
                     </VisualStateGroupList>
                 </Setter>
-            </Style>
+            </Style>-->
+    <!--
         </ResourceDictionary>
     </Application.Resources>
-</Application>
-
+</Application>-->
 
