--- a/AppTFG/AppTFG/AppShell.xaml
+++ b/AppTFG/AppTFG/AppShell.xaml
@@ -10,26 +10,20 @@
         <ResourceDictionary>
             <Style x:Key="BaseStyle" TargetType="Element">
                 <!--El color Primary se establece en la clase App.xaml y es el blanco-->
-                <Setter Property="Shell.BackgroundColor" Value="{StaticResource Primary}" />
-                
+                <Setter Property="Shell.BackgroundColor" Value="{DynamicResource PrimaryColor}" />
                 <!--Color de lo que está en los toolbars y del menú-->
-                <Setter Property="Shell.ForegroundColor" Value="Black" />
+                <Setter Property="Shell.ForegroundColor" Value="{DynamicResource SecondaryColor}" />
                 <!--Color de los títulos que aparecen en los toolbars-->
-                <Setter Property="Shell.TitleColor" Value="Black" />
-                
+                <Setter Property="Shell.TitleColor" Value="{DynamicResource SecondaryColor}" />
                 <!--<Setter Property="Shell.DisabledColor" Value="Black" />
                 <Setter Property="Shell.UnselectedColor" Value="Blue" />-->
-
                 <!--Color de la barra del menú inferior-->
-                <Setter Property="Shell.TabBarBackgroundColor" Value="White" />
-                
-                <!--<Setter Property="Shell.TabBarForegroundColor" Value="Black"/>-->
-                
+                <Setter Property="Shell.TabBarBackgroundColor" Value="{DynamicResource PrimaryColor}" />
+                <!--<Setter Property="Shell.TabBarForegroundColor" Value="Black"/>-->                
                 <!--Color de los iconos del menú inferior que no están seleccionados-->
                 <Setter Property="Shell.TabBarUnselectedColor" Value="LightGray"/>
-
                 <!--Color de los iconos del menú inferior que están seleccionados-->
-                <Setter Property="Shell.TabBarTitleColor" Value="Black"/>
+                <Setter Property="Shell.TabBarTitleColor" Value="{DynamicResource SecondaryColor}"/>
             </Style>
             <!--<Style TargetType="TabBar" BasedOn="{StaticResource BaseStyle}" />-->
             <!--Así le doy el mismo diseño que he definido arriba al FlyoutItem y al ShellContent-->
@@ -42,12 +36,10 @@
             -->
             <Style Class="FlyoutItemLabelStyle" TargetType="Label">
                 <!--Color de la propiedad seleccionada en el menú lateral-->
-                <Setter Property="TextColor" Value="Black"></Setter>
+                <Setter Property="TextColor" Value="{DynamicResource SecondaryColor}"></Setter>
             </Style>
             <Style Class="FlyoutItemLayoutStyle" TargetType="Layout" ApplyToDerivedTypes="True">
-                
                 <!--<Setter Property="BackgroundColor" Value="Red"></Setter>-->
-                
                 <Setter Property="VisualStateManager.VisualStateGroups">
                     <VisualStateGroupList>
                         <VisualStateGroup x:Name="CommonStates">
@@ -56,7 +48,7 @@
                                     <!--Color del fondo de las propiedades del menú desplegable-->
                                     <Setter Property="BackgroundColor" Value="LightGray" />
                                     <!--Color de las letras de las propiedades del menú desplegable-->
-                                    <Setter TargetName="FlyoutItemLabel" Property="Label.TextColor" Value="{StaticResource Primary}" />
+                                    <Setter TargetName="FlyoutItemLabel" Property="Label.TextColor" Value="{DynamicResource PrimaryColor}" />
                                 </VisualState.Setters>
                             </VisualState>
                             <VisualState x:Name="Selected">
@@ -79,7 +71,7 @@
                         <VisualStateGroup x:Name="CommonStates">
                             <VisualState x:Name="Normal">
                                 <VisualState.Setters>
-                                    <Setter TargetName="FlyoutItemLabel" Property="Label.TextColor" Value="{StaticResource Primary}" />
+                                    <Setter TargetName="FlyoutItemLabel" Property="Label.TextColor" Value="{DynamicResource PrimaryColor}" />
                                 </VisualState.Setters>
                             </VisualState>
                         </VisualStateGroup>
