--- a/AppTFG/AppTFG/Paginas/Comentarios.xaml
+++ b/AppTFG/AppTFG/Paginas/Comentarios.xaml
@@ -2,10 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="AppTFG.Paginas.Comentarios"
-             Title="Comentarios">
+             Title="Comentarios"
+             BackgroundColor="{DynamicResource PageBackgroundColor}">
 
     <ContentPage.Content>
-        <StackLayout BackgroundColor="White" HorizontalOptions="FillAndExpand">
+        <StackLayout HorizontalOptions="FillAndExpand">
             <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
 
             </StackLayout>
