--- a/AppTFG/AppTFG/Paginas/ListaAudiosPueblo.xaml
+++ b/AppTFG/AppTFG/Paginas/ListaAudiosPueblo.xaml
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppTFG.Paginas.ListaAudiosPueblo">
+             x:Class="AppTFG.Paginas.ListaAudiosPueblo"
+             BackgroundColor="{DynamicResource PageBackgroundColor}">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+                HorizontalOptions="CenterAndExpand" 
+                   TextColor="{DynamicResource PrimaryTextColor}"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
