--- a/AppTFG/AppTFG/Paginas/PaginaPueblo.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaPueblo.xaml
@@ -2,14 +2,15 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
-             x:Class="AppTFG.Paginas.PaginaPueblo">
+             x:Class="AppTFG.Paginas.PaginaPueblo"
+             BackgroundColor="{DynamicResource PageBackgroundColor}">
     <ContentPage.ToolbarItems>
         <ToolbarItem x:Name="btnRegistrar" Text="Guardar" Order="Primary" Priority="0" Clicked="BtnRegistrar_Clicked"/>
         <ToolbarItem x:Name="btnEliminar" Text="Eliminar" Order="Primary" Priority="1" Clicked="BtnEliminar_Clicked"/>
     </ContentPage.ToolbarItems>
     <StackLayout>
         <ScrollView Margin="0" VerticalScrollBarVisibility="Never">
-            <StackLayout BackgroundColor="White" Spacing="0" Padding="0" Margin="0">
+            <StackLayout Spacing="0" Padding="0" Margin="0">
                 <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="-15">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="2*"/>
@@ -25,12 +26,12 @@
                                         <ColumnDefinition Width="2*"/>
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
-                                    <Entry Grid.Column="0" x:Name="txtNombre" TextColor="Black" Text="{Binding Nombre}" 
+                                <Entry Grid.Column="0" x:Name="txtNombre" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Nombre}" 
                                 Placeholder="Ingresa el nombre del pueblo" HorizontalOptions="StartAndExpand" FontSize="Large"
-                                PlaceholderColor="LightGray" BackgroundColor="White" FontFamily="BSDRegular" />
+                                PlaceholderColor="LightGray" BackgroundColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular" />
                                     <Button Grid.Column="1" x:Name="btnImagen" Text="Foto perfil" 
                                 BackgroundColor="Transparent" Margin="0" FontSize="Medium"
-                                TextColor="Black" WidthRequest="90"  FontFamily="BSDRegular"
+                                TextColor="{DynamicResource PrimaryTextColor}" WidthRequest="90"  FontFamily="BSDRegular"
                                 HorizontalOptions="End" Clicked="BtnImagen_Clicked"/>
                                 </Grid>
                                 <Grid HorizontalOptions="StartAndExpand" VerticalOptions="Start" ColumnSpacing="0">
@@ -45,29 +46,29 @@
                                         <RowDefinition Height="*"/>
                                     </Grid.RowDefinitions>
                                     <Button x:Name="btnRutas" Text="Rutas"
-                                    BackgroundColor="White" FontFamily="BSDRegular"
-                                    TextColor="Black" HorizontalOptions="FillAndExpand" 
+                                    BackgroundColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular"
+                                    TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnRutas_Clicked" Grid.Column="0" Grid.Row="0" BorderColor="Gray"/>
                                 <Label Text="Rutas" FontSize="Large" Grid.Column="0" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
                                     <Button x:Name="btnActividades" Text="Acts"
-                                    BackgroundColor="White" FontFamily="BSDRegular"
-                                    TextColor="Black" HorizontalOptions="FillAndExpand" 
+                                    BackgroundColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular"
+                                    TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnActividades_Clicked" Grid.Column="1" Grid.Row="0" BorderColor="Gray"/>
                                 <Label Text="Actividades" FontSize="Large" Grid.Column="1" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
                                     <Button x:Name="btnFotos" Text="Fotos"
-                                    BackgroundColor="White" 
-                                    TextColor="Black" HorizontalOptions="FillAndExpand" FontFamily="BSDRegular"
+                                    BackgroundColor="{DynamicResource PageBackgroundColor}" 
+                                    TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="FillAndExpand" FontFamily="BSDRegular"
                                     Clicked="BtnFotos_Clicked" Grid.Column="2" Grid.Row="0" BorderColor="Gray"/>
                                 <Label Text="Fotos" FontSize="Large" Grid.Column="2" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
                                     <Button x:Name="btnVideo" Text="Vídeos" 
-                                    BackgroundColor="White" 
-                                    TextColor="Black"  HorizontalOptions="FillAndExpand" 
+                                    BackgroundColor="{DynamicResource PageBackgroundColor}" 
+                                    TextColor="{DynamicResource PrimaryTextColor}"  HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnVideo_Clicked" Grid.Column="3" Grid.Row="0" BorderColor="Gray" FontFamily="BSDRegular"/>
                                 <Label Text="Vídeos" FontSize="Large"  Grid.Column="3" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
                                 </Grid>
-                                <Editor x:Name="txtDescripcion" TextColor="Black" Text="{Binding Descripcion}" 
+                            <Editor x:Name="txtDescripcion" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Descripcion}" 
                                 Placeholder="Ingresa una descripción del pueblo"  Margin="10, 0, 10, 25" AutoSize="TextChanges"
-                                PlaceholderColor="LightGray" BackgroundColor="White" FontSize="Large" FontFamily="BSDRegular"/>
+                                PlaceholderColor="LightGray" BackgroundColor="{DynamicResource PageBackgroundColor}" FontSize="Large" FontFamily="BSDRegular"/>
                             </StackLayout>
                         </Frame>
                         <!--<Label Text="Coordenadas del pueblo(Latitud, Longitud): " TextColor="Gray" FontSize="Medium"/>
@@ -90,9 +91,9 @@
                     <StackLayout Grid.Row="2" x:Name="stackMapa" Margin="0, 0, 0, 0" HeightRequest="-1" WidthRequest="-1">
                         <maps:Map x:Name="map" WidthRequest="-1" HeightRequest="300" HasScrollEnabled="True"/>
                         <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="5">
-                            <Button Text="Street" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="White" TextColor="Black" FontFamily="BSDRegular"/>
-                            <Button Text="Satélite" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="White" TextColor="Black" FontFamily="BSDRegular"/>
-                            <Button Text="Híbrido" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="White" TextColor="Black" FontFamily="BSDRegular"/>
+                            <Button Text="Street" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PageBackgroundColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular"/>
+                            <Button Text="Satélite" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PageBackgroundColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular"/>
+                            <Button Text="Híbrido" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PageBackgroundColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular"/>
                         </StackLayout>
                     </StackLayout>
                 </Grid>
