--- a/AppTFG/AppTFG/Paginas/PaginaVistaActividad.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaVistaActividad.xaml
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppTFG.Paginas.PaginaVistaActividad">
+             x:Class="AppTFG.Paginas.PaginaVistaActividad"
+             BackgroundColor="{DynamicResource PageBackgroundColor}">
     <ScrollView Margin="0" VerticalScrollBarVisibility="Never">
-        <StackLayout BackgroundColor="White" Spacing="0" Padding="0" Margin="0">
+        <StackLayout Spacing="0" Padding="0" Margin="0">
             <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="-15">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="2.5*"/>
                     <RowDefinition Height="2*"/>
-                    <RowDefinition Height="400"/>
+                    <RowDefinition Height="1*"/>
                 </Grid.RowDefinitions>
                 <Image Grid.Row="0" x:Name="imgActividad" Source="{Binding ImagenPrincipal}" 
                            VerticalOptions="StartAndExpand" HorizontalOptions="Center" 
@@ -16,11 +17,11 @@
                            WidthRequest="-1"/>
                 <Frame Grid.Row="1" CornerRadius="15" Padding="0">
                     <StackLayout HorizontalOptions="StartAndExpand" VerticalOptions="Start" Margin="10">
-                        <Label x:Name="txtNombre" TextColor="Black" Text="{Binding Nombre}" 
-                                BackgroundColor="White" FontSize="Medium" FontFamily="BSDRegular"/>
+                        <Label x:Name="txtNombre" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Nombre}" 
+                                BackgroundColor="{DynamicResource PageBackgroundColor}" FontSize="Medium" FontFamily="BSDRegular"/>
                     </StackLayout>
                 </Frame>
-                <Button Grid.Row="2" Text="Iniciar actividad" TextColor="Black"/>
+                <Button Grid.Row="2" Text="Iniciar actividad" TextColor="{DynamicResource PrimaryTextColor}" BackgroundColor="{DynamicResource PageBackgroundColor}"/>
             </Grid>
             <ActivityIndicator x:Name="indicator" Color="#263238" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
         </StackLayout>
