--- a/AppTFG/AppTFG/Paginas/PaginaVistaListaFotos.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaVistaListaFotos.xaml
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppTFG.Paginas.PaginaVistaListaFotos">
+             x:Class="AppTFG.Paginas.PaginaVistaListaFotos"
+            BackgroundColor="{DynamicResource PageBackgroundColor}">
     <TabbedPage.Children>
         <ContentPage IconImageSource="icon.png">
             <ContentPage.Content>
                 <ScrollView VerticalScrollBarVisibility="Never">
-                        <StackLayout BackgroundColor="White">
+                        <StackLayout>
                             <ActivityIndicator x:Name="indicator" Color="#263238" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
                             <CollectionView x:Name="clvFotosPueblo" ItemsSource="{Binding Fotos}" ItemsLayout="VerticalGrid, 3">
                                 <CollectionView.ItemTemplate>
@@ -35,13 +36,13 @@
         <ContentPage IconImageSource="icon.png">
             <ContentPage.Content>
                 <ScrollView VerticalScrollBarVisibility="Never">
-                    <StackLayout BackgroundColor="White" Spacing="0" Orientation="Vertical" Padding="0" >
+                    <StackLayout Spacing="0" Orientation="Vertical" Padding="0" >
                         <ActivityIndicator x:Name="indicador" Color="#263238" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
                         <ListView x:Name="lsvFotosPueblo" ItemsSource="{Binding Fotos}" ItemSelected="LsvFotosPueblo_ItemSelected" HasUnevenRows="True">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <ViewCell>
-                                        <StackLayout BackgroundColor="White" Spacing="0" Orientation="Vertical" Padding="5">
+                                        <StackLayout Spacing="0" Orientation="Vertical" Padding="5">
                                             <Grid>
                                                 <Grid.RowDefinitions>
                                                     <RowDefinition Height="200"/>
@@ -54,7 +55,7 @@
                                                            HorizontalOptions="Fill" VerticalOptions="Fill" 
                                                            Grid.Column="0" Grid.Row="0"/>
                                                 <Label Text="{Binding Nombre}" LineBreakMode="WordWrap" 
-                                                           VerticalOptions="Center" FontSize="Title" TextColor="Black" 
+                                                           VerticalOptions="Center" FontSize="Title" TextColor="{DynamicResource PrimaryTextColor}" 
                                                            HorizontalOptions="Start" Margin="5, 0, 0, 5"
                                                            HorizontalTextAlignment="Start" FontFamily="BSDRegular" 
                                                            Grid.Column="0" Grid.Row="1"/>
