--- a/AppTFG/AppTFG/Paginas/PaginaVistaPueblo.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaVistaPueblo.xaml
@@ -2,10 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
-             x:Class="AppTFG.Paginas.PaginaVistaPueblo">
+             x:Class="AppTFG.Paginas.PaginaVistaPueblo"
+             BackgroundColor="{DynamicResource PageBackgroundColor}">
     <StackLayout>
         <ScrollView Margin="0" VerticalScrollBarVisibility="Never">
-            <StackLayout BackgroundColor="White" Spacing="0" Padding="0" Margin="0">
+            <StackLayout Spacing="0" Padding="0" Margin="0">
                 <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="-15">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="2*"/>
@@ -21,9 +22,9 @@
                                     <ColumnDefinition Width="2*"/>
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
-                                <Label Grid.Column="0" x:Name="txtNombre" TextColor="Black" Text="{Binding Nombre}" 
+                                <Label Grid.Column="0" x:Name="txtNombre" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Nombre}" 
                                 HorizontalOptions="StartAndExpand" FontSize="Large"
-                                BackgroundColor="White" FontFamily="BSDRegular" />
+                                BackgroundColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular" />
                             </Grid>
                             <Grid HorizontalOptions="StartAndExpand" VerticalOptions="Start" ColumnSpacing="0">
                                 <Grid.ColumnDefinitions>
@@ -37,28 +38,28 @@
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
                                 <Button x:Name="btnRutas" Text="Rutas"
-                                    BackgroundColor="White" FontFamily="BSDRegular"
+                                    BackgroundColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular"
                                     TextColor="Black" HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnRutas_Clicked" Grid.Column="0" Grid.Row="0" BorderColor="Gray"/>
                                 <Label Text="Rutas" FontSize="Large" Grid.Column="0" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
                                 <Button x:Name="btnActividades" Text="Acts"
-                                    BackgroundColor="White" FontFamily="BSDRegular"
-                                    TextColor="Black" HorizontalOptions="FillAndExpand" 
+                                    BackgroundColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular"
+                                    TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnActividades_Clicked" Grid.Column="1" Grid.Row="0" BorderColor="Gray"/>
                                 <Label Text="Actividades" FontSize="Large" Grid.Column="1" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
                                 <Button x:Name="btnFotos" Text="Fotos"
-                                    BackgroundColor="White" 
-                                    TextColor="Black" HorizontalOptions="FillAndExpand" FontFamily="BSDRegular"
+                                    BackgroundColor="{DynamicResource PageBackgroundColor}" 
+                                    TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="FillAndExpand" FontFamily="BSDRegular"
                                     Clicked="BtnFotos_Clicked" Grid.Column="2" Grid.Row="0" BorderColor="Gray"/>
                                 <Label Text="Fotos" FontSize="Large" Grid.Column="2" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
                                 <Button x:Name="btnVideo" Text="Vídeos" 
-                                    BackgroundColor="White" 
-                                    TextColor="Black"  HorizontalOptions="FillAndExpand" 
+                                    BackgroundColor="{DynamicResource PageBackgroundColor}" 
+                                    TextColor="{DynamicResource PrimaryTextColor}"  HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnVideo_Clicked" Grid.Column="3" Grid.Row="0" BorderColor="Gray" FontFamily="BSDRegular"/>
                                 <Label Text="Vídeos" FontSize="Large"  Grid.Column="3" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
                             </Grid>
-                            <Label x:Name="txtDescripcion" TextColor="Black" Text="{Binding Descripcion}" 
-                                Margin="10, 0, 10, 25" BackgroundColor="White" FontSize="Large" FontFamily="BSDRegular"/>
+                            <Label x:Name="txtDescripcion" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Descripcion}" 
+                                Margin="10, 0, 10, 25" BackgroundColor="{DynamicResource PageBackgroundColor}" FontSize="Large" FontFamily="BSDRegular"/>
                         </StackLayout>
                     </Frame>
                     <!--<Label Text="Coordenadas del pueblo(Latitud, Longitud): " TextColor="Gray" FontSize="Medium"/>
@@ -81,9 +82,9 @@
                     <StackLayout Grid.Row="2" x:Name="stackMapa" Margin="0, 0, 0, 0" HeightRequest="-1" WidthRequest="-1">
                         <maps:Map x:Name="map" WidthRequest="-1" HeightRequest="300" HasScrollEnabled="True"/>
                         <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="5">
-                            <Button Text="Street" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="White" TextColor="Black" FontFamily="BSDRegular"/>
-                            <Button Text="Satélite" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="White" TextColor="Black" FontFamily="BSDRegular"/>
-                            <Button Text="Híbrido" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="White" TextColor="Black" FontFamily="BSDRegular"/>
+                            <Button Text="Street" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PageBackgroundColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular"/>
+                            <Button Text="Satélite" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PageBackgroundColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular"/>
+                            <Button Text="Híbrido" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PageBackgroundColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular"/>
                         </StackLayout>
                     </StackLayout>
                 </Grid>
