--- a/AppTFG/AppTFG/Temas/TemaClaro.xaml
+++ b/AppTFG/AppTFG/Temas/TemaClaro.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ResourceDictionary xmlns="http://xamarin.com/schemas/2014/forms"
                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                    x:Class="AppTFG.Temas.LightTheme">
+                    x:Class="AppTFG.Temas.TemaClaro">
 
     <Color x:Key="PageBackgroundColor">White</Color>
     <Color x:Key="NavigationBarColor">WhiteSmoke</Color>
