--- a/AppTFG/AppTFG/Temas/TemaOscuro.xaml
+++ b/AppTFG/AppTFG/Temas/TemaOscuro.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ResourceDictionary xmlns="http://xamarin.com/schemas/2014/forms"
                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                    x:Class="AppTFG.Temas.DarkTheme">
+                    x:Class="AppTFG.Temas.TemaOscuro">
 
     <Color x:Key="PageBackgroundColor">Black</Color>
     <Color x:Key="NavigationBarColor">Teal</Color>
